  (Matthieu Casanova)

- Changed GUIUtilities.confirm() to work also from worker threads, by
  deferring the confirmation dialog to the EDT. This fixes threading
  issues with HyperSearchRequest, if the number of results exceeds the
  "max results" option. (Shlomy Reinstein)

- Fix "-reuseview" not bringing the view to the front.
  (Sf.net bug #1510651 - Shlomy Reinstein)
}}}
{{{ API changes

- Introduction of a new ThreadUtilities class implementing a
    threadpool using Java 1.6 Concurrent API. Use this instead of
    VFSManager's WorkThreadPool, which is now deprecated.
    Related: A new Task Monitor dockable which will eventually replace
    the I/O progress monitor, for showing progress of tasks.
    Still TODO: rewrite VFSManager + all plugins to use ThreadUtilities
    instead of WorkThreadPool. (Matthieu Casanova)

- Made method TextUtilities.getCharType() public (Matthieu Casanova)

- Method MiscUtilities.formatFileSize() moved to StandardUtilities
  (Matthieu Casanova)

- New method E ServiceManager.getService(Class<E> clazz, String name) to get
  service instance (Matthieu Casanova)

- Register api changed, it now contains Transferable (Matthieu Casanova)

- Added ThreadUtilities utility class (Matthieu Casanova)

- Removed deprecated objectfactory xml parser.

- File System Browser dynamic menu support (#2938170 - François Rey)

- Added a method for unregistering macro handlers: Macros.unregisterHandler().

- bufferSet api rewritten. Now each editPane have its own bufferSet,
  does not share it with other editPanes. The bufferset scope is the
  same for all EditPanes. (Matthieu Casanova)

- Status bar widget : it is now possible to use labels starting with letters
  in status bar. (Matthieu Casanova)

- Removed long deprecated TextArea#isDragInProgress() and
  TextArea#setDragInProgress(). (SF.net patch #2809776,2936146 - Kevin Hunter)

- EditBus.send() will now always deliver messages on the AWT thread, although